--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {//To Enable java 1.8 feature.
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -27,7 +32,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
     testImplementation 'junit:junit:4.12'
-    implementation 'org.koin:koin-android:2.2.0-rc-2'
+    implementation 'io.pixel.android:pixel:0.0.2'
+    implementation 'com.google.android.exoplayer:exoplayer:r1.5.6'
 }
